# fastapi-ws-audio-recorder

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
client/: index.html
fastapi-ws-audio-recorder/: README.md  pyproject.toml
fastapi-ws-audio-recorder/fastapi_ws_audio_recorder/: __init__.py  __main__.py  app.py
fastapi-ws-audio-recorder/tests/routers/: test_health.py
